--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Poppins:wght@100;200;300;400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
     integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <meta charset="UTF-8">
@@ -63,7 +63,7 @@
       </div>
     </nav>
     
-    <div class="home hidden">
+    <div class="home hide">
       
 
       <div class="parallax">
@@ -87,7 +87,7 @@
     </div>
    
 
-    <button id="modalBtn" type="button" class="btn btn-primary hidden" data-bs-toggle="modal" data-bs-target="#myModal"
+    <button id="modalBtn" type="button" class="btn btn-primary hide" data-bs-toggle="modal" data-bs-target="#myModal"
       data-backdrop='static' data-keyboard='false'>
       Open modal
     </button>
@@ -99,7 +99,7 @@
       <h6> Try searching by coin name (for
         example : bitcoin)  or by coin code name (for example: BTC)</h6>
     </div>
-    <div class="text-center mt-5 text-light about hidden">
+    <div class="text-center mt-5 text-light about hide">
       <h2 class="about-h2 ">Crypto Currency project by Ohav Eden</h2>
       <div class="about-div">
         <p class="about-p">My name is Ohav, i'm a 25 years old full stack developer from
@@ -150,13 +150,14 @@
         </div>
       </div>
     </div>
-    <div class="liveReports hidden ">
+    <div class="liveReports hide ">
       <h1 class="h3 text-white text-center">No live reports because it is optional and i was lazy :)</h1>
     </div>
   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
-    </script>
+    </script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.js" integrity="sha512-nO7wgHUoWPYGCNriyGzcFwPSF+bPDOR+NvtOYy2wMcWkrnCNPKBcFEkU80XIN14UVja0Gdnff9EmydyLlOL7mQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
   </body>
 
